Updated some infomations

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 ---
 title: Home
 ---
-<h1>{{ "Hello World!" | downcase }}</h1>
+<h1>{{"Hello World!"}}</h1>
+<h2>{{"Welcome to my not-pretty-at-all blog!"}}</h1>
+
+Basically, the only reason I built this site is to learn some basic konwledge about <strong>jekyll</strong> and <strong>Github Pages</strong> and etc...
+
+<br>I've build another one. It's more beautiful.
+<br>Check <a title="道火校园" href=https://firestealers.github.io>Firestealers.</a>
+
